# simple-ssh-manager

./: .gitignore  LICENSE  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.svelte  TerminalWindow.svelte  fonts.css  main.ts  style.css  terminal.css  terminal.ts  themes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: fonts.ts  icons.ts
src/lib/api/: config.ts  data.ts  sftp.ts  ssh.ts  types.ts
src/lib/components/modals/: ConfirmModal.svelte  InputPromptModal.svelte  PasswordPromptModal.svelte  SessionModal.svelte  SessionPicker.svelte  SettingsModal.svelte  inputPrompt.ts  inputPromptTypes.ts  mount.ts
src/lib/components/sftp/: Breadcrumb.svelte  FileRow.svelte  SftpPanel.svelte  SftpPanels.svelte
src/lib/components/sidebar/: EdgeTrigger.svelte  FolderHeader.svelte  Resizer.svelte  SessionRow.svelte  Sidebar.svelte  Tree.svelte  types.ts
src/lib/components/terminal/: Pane.svelte  Tab.svelte  TerminalArea.svelte  icons.ts
src/lib/components/ui/: ContextMenu.svelte
src/lib/dnd/: floatingPanel.ts  state.svelte.ts  terminalDnd.ts  treeDnd.ts
src/lib/i18n/: en.json  index.ts  ko.json
src/lib/sftp/: operations.ts
src/lib/stores/: data.svelte.ts  sftp.svelte.ts  terminals.svelte.ts  ui.svelte.ts
src/lib/terminal/: operations.ts
