[package]
name = "simple-ssh-client"
version = "1.0.3"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2.7"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
whoami = "1"
russh = "0.49"
russh-sftp = "2.1"
russh-keys = "0.49"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "net", "io-util", "time"] }
async-trait = "0.1"
portable-pty = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }
